# traits.build

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  clippy.toml  fly.toml  fly.toml.example  index.html  nohup.out  robots.txt  sitemap.xml  src  traits.code-workspace  traits.toml  wrangler.jsonc
.chat/sessions/: 20260329_220810.json  20260329_220926.json  20260330_010609.json  20260330_024253.json  20260330_024339.json  20260330_033637.json  20260330_113214.json  20260330_171020.json  20260330_195849.json  20260331_005151.json  20260402_152315.json
.github/agents/: traits.build.agent.md
.github/memories/: cross_reference_audit.md  dependency_tree.md  detailed_crate_references.md  dual_kernel_architecture_complete.md  executive_summary.md  kernel_trait_dependencies.md  line_by_line_references.md  sensitive_audit.md  site_exploration.md  trait_build_architecture.md
.github/skills/src2doc/: SKILL.md
.github/skills/traits.build/: SKILL.md
.github/workflows/: deploy-docs.yml  release.yml  test.yml
data/vfs/canvas/: app.html
docs/: architecture.md  cli.md  creating-traits.md  deploy.md  deployment.md  getting-started.md  interfaces.md  intro.md  platform-abstraction.md  release.md  rest-api.md  trait-definition.md  traits.build.agent.md  type-system.md
docs/skills/secrets/: SKILL.md
docs/skills/src2doc/: SKILL.md
local/: helper.sh  install.sh  traits.sh
relay/: package-lock.json  package.json  wrangler.toml
relay/src/: index.js
scripts/: add_wasm_flags.py  build.sh  check-spa-parse.js  cli_formatters_codegen.rs  fast-deploy.sh  publish.sh  release.sh  t
site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
site/docs/: architecture.md  cli.md  deployment.md  getting-started.md  intro.md  rest-api.md  trait-definition.md
site/src/css/: custom.css
site/src/pages/: index.js
traits/browser/fetch/: fetch.features.json  fetch.rs  fetch.trait.toml
traits/browser/interact/: interact.features.json  interact.rs  interact.trait.toml
traits/browser/screenshot/: screenshot.features.json  screenshot.rs  screenshot.trait.toml
traits/kernel/call/: call.features.json  call.md  call.rs  call.trait.toml
traits/kernel/cli/: cli.features.json  cli.rs  cli.trait.toml  shell.rs  vfs.rs
traits/kernel/config/: config.features.json  config.md  config.rs  config.trait.toml
traits/kernel/dispatcher/: dispatcher.features.json  dispatcher.md  dispatcher.rs  dispatcher.trait.toml
traits/kernel/dylib_loader/: dylib_loader.features.json  dylib_loader.md  dylib_loader.rs  dylib_loader.trait.toml
traits/kernel/globals/: globals.features.json  globals.md  globals.rs  globals.trait.toml
traits/kernel/logic/: Cargo.toml  logic.features.json  logic.trait.toml
traits/kernel/logic/src/: lib.rs  registry.rs  types.rs  vfs.rs
traits/kernel/logic/src/platform/: mod.rs  time.rs
traits/kernel/main/: main.features.json  main.md  main.rs  main.trait.toml
traits/kernel/plugin_api/: Cargo.toml  plugin_api.features.json  plugin_api.md  plugin_api.rs  plugin_api.trait.toml
traits/kernel/registry/: registry.features.json  registry.md  registry.rs  registry.trait.toml
traits/kernel/reload/: reload.features.json  reload.trait.toml
traits/kernel/serve/: serve.features.json  serve.md  serve.rs  serve.trait.toml
traits/kernel/types/: types.features.json  types.md  types.rs  types.trait.toml
traits/kernel/wasm/: Cargo.toml  build.rs  wasm.features.json  wasm.trait.toml
traits/kernel/wasm/src/: lib.rs  registry.rs  test_runner.rs  wasm_secrets.rs
traits/kernel/wasm/src/wasm_traits/: checksum.rs  mod.rs  registry.rs  version.rs
traits/llm/agent/: SYSTEM.md  agent.cli.rs  agent.features.json  agent.rs  agent.trait.toml
traits/llm/openai/: openai.features.json  openai.trait.toml
traits/llm/prompt/: context.rs  prompt.features.json  prompt.trait.toml
traits/sys/audio/: audio.features.json  audio.rs  audio.trait.toml
traits/sys/bindings/: bindings.features.json  bindings.rs  bindings.trait.toml
traits/sys/call/: call.features.json  call.rs  call.trait.toml  call_cli.rs
traits/sys/canvas/: canvas.features.json  canvas.rs  canvas.trait.toml
traits/sys/chat/: chat.cli.rs  chat.features.json  chat.rs  chat.trait.toml
traits/sys/chat_delete/: chat_delete.features.json  chat_delete.rs  chat_delete.trait.toml
traits/sys/chat_learnings/: chat_learnings.features.json  chat_learnings.rs  chat_learnings.trait.toml
traits/sys/chat_protocols/: chat_protocols.features.json  chat_protocols.rs  chat_protocols.trait.toml
traits/sys/chat_workspaces/: chat_workspaces.features.json  chat_workspaces.rs  chat_workspaces.trait.toml
traits/sys/checksum/: Cargo.toml  checksum.features.json  checksum.md  checksum.rs  checksum.sha256.rs  checksum.trait.toml  lib.rs
traits/sys/cli/: .cli_history.json  cli.features.json  cli.md  cli.rs  cli.trait.toml
traits/sys/config/: config.cli.rs  config.features.json  config.rs  config.trait.toml
traits/sys/dylib_loader/: dylib_loader.rs  dylib_loader.trait.toml
traits/sys/echo/: echo.features.json  echo.rs  echo.trait.toml
traits/sys/info/: info.cli.rs  info.features.json  info.md  info.rs  info.trait.toml
traits/sys/list/: list.features.json  list.md  list.rs  list.trait.toml
traits/sys/llm/: llm.features.json  llm.rs  llm.trait.toml
traits/sys/mcp/: mcp.features.json  mcp.rs  mcp.trait.toml
traits/sys/openapi/: openapi.features.json  openapi.rs  openapi.trait.toml
traits/sys/ps/: Cargo.toml  lib.rs  ps.cli.rs  ps.features.json  ps.rs  ps.trait.toml
traits/sys/ps/wasm/: wasm.cli.rs  wasm.features.json  wasm.trait.toml  wasm_ps.rs
traits/sys/registry/: registry.features.json  registry.md  registry.rs  registry.trait.toml
traits/sys/release/: release.features.json  release.rs  release.trait.toml  release_cli.rs
traits/sys/reload/: reload.features.json  reload.md  reload.rs  reload.trait.toml
traits/sys/secrets/: secrets.features.json  secrets.rs  secrets.trait.toml
traits/sys/serve/: serve.rs  serve.trait.toml
traits/sys/shell/: shell.features.json  (+2 more)
(+229 files in other folders)
