[package]
name = "kernel-logic"
version = "0.1.0"
edition = "2021"
description = "Shared pure-logic kernel: types, registry data model, TOML parsing"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
