[package]
name = "plugin_api"
version = "0.260327.143452"
edition = "2021"
description = "C ABI wrapper for trait cdylib plugins"
authors = ["kilian"]
license = "MIT"

[lib]
path = "plugin_api.rs"

[dependencies]
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kernel)'] }