[package]
name = "traits-plugin-api"
version = "0.260328.175526"
edition = "2021"
description = "C ABI wrapper for trait cdylib plugins"
authors = ["kilian"]
license = "MIT"
repository = "https://github.com/kilian-ai/traits.build"
homepage = "https://traits.build/"

[lib]
path = "plugin_api.rs"

[dependencies]
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kernel)'] }