[package]
name = "traits-wasm"
version = "0.1.0"
edition = "2021"
description = "traits.build kernel compiled to WebAssembly"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
js-sys = "0.3"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
