[package]
name = "traits-wasm"
version = "0.260329.235630"
edition = "2021"
description = "traits.build kernel compiled to WebAssembly"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kernel-logic = { path = "../logic", version = "0.260329.235630" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["XmlHttpRequest", "XmlHttpRequestResponseType"] }
sha2 = "0.10"
shell-words = "1"
maud = "0.26"
pulldown-cmark = "0.12"

# profile.release is in workspace root Cargo.toml