[package]
name = "trait-sys-checksum"
version = "0.260327.151655"
edition = "2021"
description = "SHA-256 checksum trait (cdylib plugin)"
license = "MIT"
publish = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
plugin_api = { path = "../../kernel/plugin_api", version = "0.260327.151655" }
serde_json = "1"
sha2 = "0.10"
regex = "1"