[package]
name = "trait-sys-ps"
version = "0.260327.152038"
edition = "2021"
description = "Process listing trait (cdylib plugin)"
license = "MIT"
publish = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
plugin_api = { package = "traits-plugin-api", path = "../../kernel/plugin_api", version = "0.260327.152038" }
serde_json = "1"
libc = "0.2"